--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,10 +24,11 @@ python = "^3.10"
 fastapi = "^0.105.0"
 uvicorn = { extras = ["standard"], version = "^0.25.0" }
 psycopg2-binary = "^2.9.9"
-sqlalchemy = "^2.0.23"
+sqlalchemy = {extras = ["mypy"], version = "^2.0.23"}
 python-dotenv = "^1.0.0"
 geoalchemy2 = "^0.14.2"
 alembic = "^1.13.1"
+sqlalchemy2-stubs = "^0.0.2a37"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
