--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ sqlalchemy = { extras = ["mypy"], version = "^2.0.23" }
 python-dotenv = "^1.0.0"
 geoalchemy2 = {extras = ["shapely"], version = "^0.14.2"}
 alembic = "^1.13.1"
+dependency-injector = "^4.41.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
