--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pytest = "^7.4.3"
 mypy = "^1.8.0"
 autopep8 = "^2.0.4"
 pre-commit = "^3.6.0"
+ruff = "^0.1.9"
 
 [build-system]
 requires = ["poetry-core"]
