--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,6 +79,7 @@ jobs:
         id: lint
         if: always()
         run: |
+            poetry shell
             ruff ./src/app/ 
             ruff ./src/core/ 
 
