--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ mypy = "^1.8.0"
 autopep8 = "^2.0.4"
 pre-commit = "^3.6.0"
 ruff = "^0.1.9"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
