--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
           curl -sSL https://install.python-poetry.org | python3 -
 
       - name: Install dev dependencies
-        run: poetry install --dev
+        run: poetry install --only dev
     
       - name: Import Order Check with isort
         if: always()
@@ -73,7 +73,7 @@ jobs:
           curl -sSL https://install.python-poetry.org | python3 -
 
       - name: Install dev dependencies
-        run: poetry install --dev
+        run: poetry install --only dev
     
       - name: Lint - ruff
         id: lint
@@ -104,7 +104,7 @@ jobs:
           curl -sSL https://install.python-poetry.org | python3 -
 
       - name: Install dev dependencies
-        run: poetry install --dev
+        run: poetry install --only dev
 
       - name: Type Check - mypy
         run: |
