--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,10 @@ in-place = true
 recursive = true
 aggressive = 3
 
+[tool.mypy]
+warn_return_any = true
+warn_unused_configs = true
+exclude = ['.venv','src/alembic']
 
 [tool.poetry.dependencies]
 python = "^3.10"
