--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ warn_return_any = true
 warn_unused_configs = true
 exclude = ['.venv','src/alembic']
 
+[tool.ruff]
+exclude = ['.venv','src/alembic']
+
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.105.0"
