--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,13 @@ services:
   postgres:
     image: postgis/postgis:14-3.4
     ports:
-      - "5432:5432"
+      - 5432:5432
     environment:
-      POSTGRES_USER: postgeres
-      POSTGRES_PASSWORD: postgeres
-      POSTGRES_DB: postgeres
-#     volumes:
-#       - postgres_data:/var/lib/postgresql/data
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
 
-# volumes:
-#   postgres_data:
+volumes:
+  postgres_data:
