--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ python-dotenv = "^1.0.0"
 geoalchemy2 = { extras = ["shapely"], version = "^0.14.2" }
 alembic = "^1.13.1"
 dependency-injector = "^4.41.0"
+pydantic-settings = "^2.1.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.3"
@@ -67,7 +68,7 @@ poetry_command = ""
 [tool.poe.tasks]
 doc = "poetry run poe"
 dev = "poetry run uvicorn src.app.main:app --reload"
-lint = "poetry run ruff"
+lint = "poetry run ruff src tests --fix"
 test = "poetry run pytest tests -vv"
 apply-migration = "poetry run alembic upgrade head"
 empty-migration = "poetry run alembic revision"
@@ -81,6 +82,8 @@ rm -rf ./**/*.pyc
     cmd = "poetry run isort src tests"
     [[tool.poe.tasks.format.sequence]]
     cmd = "poetry run autopep8 src tests"
+    [[tool.poe.tasks.format.sequence]]
+    cmd = "poetry run ruff format src tests"
 
 
 
