--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,10 +31,23 @@ jobs:
       - name: Install dev dependencies
         run: poetry install --only dev
 
-      - name: Run format command
+      - name: Import Order Check with isort
         if: always()
         run: |
-            poetry format
+            poetry run isort . --check-only --diff --verbose
+
+
+      - name: autopep8 core
+        id: autopep8-core
+        uses: peter-evans/autopep8@v2
+        with:
+          args: ./src/core --recursive --in-place
+
+      - name: autopep8 ape
+        id: autopep8-app
+        uses: peter-evans/autopep8@v2
+        with:
+          args: ./src/app --recursive --in-place
 
   check-lint:
     name: "Check Linting"
@@ -95,4 +108,4 @@ jobs:
 
       - name: Type Check - mypy
         run: |
-          poetry lint
+          poetry run mypy src tests
