--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,10 +31,10 @@ jobs:
       - name: Install dev dependencies
         run: poetry install --only dev
 
-      - name: Import Order Check with isort
+      - name: Import Order Check with ruff
         if: always()
         run: |
-            poetry run isort . --check-only --diff --verbose
+            poetry run ruff format src tests
 
 
       - name: autopep8 core
@@ -103,8 +103,8 @@ jobs:
         run: |
           curl -sSL https://install.python-poetry.org | python3 -
 
-      - name: Install dev dependencies
-        run: poetry install --only dev
+      - name: Install dependencies
+        run: poetry install
 
       - name: Type Check - mypy
         run: |
