feat:docker compose stack for local development (#7)
* fix: `USE_IN_MEMORY_DB` fails

* feat: return proper response object

* feat: add docker compose stack

* feat: seed env depending on APP_ENV

* feat: add docker compose stack

* update gitignore

* stick to pg image naming convention

* wip

* feat: seed db

* formatting

* formatting

* chore: split models into separate

* fix

* linter

* chore: remove print statement

* fix type checker

* update gitignore

* Update .envrc

* update readme

* Update src/app/configurator/config.py

Co-authored-by: Hamza Rabah <h.rabah@outlook.com>

* refactor: move base class to separate file

* use get_settings for db credentials

* switch to factory pattern

---------

Co-authored-by: Hamza Rabah <h.rabah@outlook.com>

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,11 @@
 # add all enviroment variable here.
 
-# add all secrets and credentials in `.envrc.local`
-source .envrc.local
+if [ "$APP_ENV" = "local" ]; then
+    source .envrc.local
+fi
+
+if [ "$APP_ENV" = "prod" ]; then
+    source .envrc.prod
+fi
+
+
