--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,9 +58,37 @@ module = "pytestarch.*"
 ignore_missing_imports = true
 
 [tool.pytest.ini_options]
+testpaths = ["tests"]
 filterwarnings = [
     'ignore:The `__fields__` attribute is deprecated',
 ]
+
+[tool.pytest]
+addopts = "--cov=src --cov-report html tests/"
+
+[tool.coverage.run]
+branch = true
+
+[tool.coverage.report]
+show_missing = true
+skip_empty = true
+# Regexes for lines to exclude from consideration
+exclude_also = [
+    # Don't complain about missing debug-only code:
+    "def __repr__",
+    "if self\\.debug",
+
+    # Don't complain if tests don't hit defensive assertion code:
+    "raise AssertionError",
+    "raise NotImplementedError",
+
+    # Don't complain if non-runnable code isn't run:
+    "if 0:",
+    "if __name__ == .__main__.:",
+
+    # Don't complain about abstract methods, they aren't run:
+    "@(abc\\.)?abstractmethod",
+    ]
 
 [tool.ruff]
 exclude = ['.venv', 'src/alembic']
