--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,7 +18,7 @@ repos:
     hooks:
       - id: pytest-check
         name: pytest-check
-        entry: poetry test
+        entry: poetry run poe test
         language: system
         pass_filenames: false
         always_run: true
