--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,7 @@ repos:
     rev: "1.7.0"
     hooks:
       - id: poetry-check
-      - id: poetry-lock
+      # - id: poetry-lock
       - id: poetry-install
   - repo: https://github.com/astral-sh/ruff-pre-commit
     # Ruff version.
